Allow on adding args in kubernates wizard app.